hide menubar: add toggles to Deere, LateNight & Tango. Shade: enforce menubar

--- a/res/skins/LateNight/style.qss
+++ b/res/skins/LateNight/style.qss
@@ -236,7 +236,8 @@ WEffectChainPresetSelector QAbstractScrollArea,
 #PreviewTitle,
 #PreviewLabel,
 WBeatSpinBox,
-#spinBoxTransition {
+#spinBoxTransition,
+#MenubarToggle {
   font-size: 14px;
 }
 
