--- a/src/preferences/dialog/dlgprefsounddlg.ui
+++ b/src/preferences/dialog/dlgprefsounddlg.ui
@@ -16,6 +16,26 @@
   <layout class="QVBoxLayout" name="verticalLayout_2">
 
    <item>
+    <widget class="QGroupBox" name="groupBox_soundProfiles">
+     <property name="title">
+      <string>Sound Profile</string>
+     </property>
+     <layout class="QGridLayout" name="soundProfileLayout">
+      <item row="0" column="0" colspan="2">
+       <widget class="QComboBox" name="profileComboBox"/>
+      </item>
+      <item row="0" column="2">
+       <widget class="QPushButton" name="loadProfileButton">
+        <property name="text">
+         <string>Load Profile</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+
+   <item>
     <layout class="QGridLayout" name="soundOptionsLayout">
      <item row="0" column="0">
       <widget class="QLabel" name="apiLabel">
