WIP DlgPrefSound: add sound profile selector

--- a/src/preferences/dialog/dlgprefsounddlg.ui
+++ b/src/preferences/dialog/dlgprefsounddlg.ui
@@ -21,13 +21,34 @@
       <string>Sound Profile</string>
      </property>
      <layout class="QGridLayout" name="soundProfileLayout">
-      <item row="0" column="0" colspan="2">
+      <item row="0" column="0" colspan="3">
        <widget class="QComboBox" name="profileComboBox"/>
       </item>
-      <item row="0" column="2">
-       <widget class="QPushButton" name="loadProfileButton">
+      <item row="1" column="0">
+       <widget class="QPushButton" name="newProfileButton">
         <property name="text">
-         <string>Load Profile</string>
+         <string>Create New Profile</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QPushButton" name="renameProfileButton">
+        <property name="text">
+         <string>Rename</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="2">
+       <widget class="QPushButton" name="dupProfileButton">
+        <property name="text">
+         <string>Duplicate Profile</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="3">
+       <widget class="QPushButton" name="delProfileButton">
+        <property name="text">
+         <string>Delete Profile</string>
         </property>
        </widget>
       </item>
