--- a/src/preferences/dialog/dlgprefinterfacedlg.ui
+++ b/src/preferences/dialog/dlgprefinterfacedlg.ui
@@ -14,6 +14,7 @@
    <string>Interface Preferences</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_3">
+
    <item row="3" column="0">
     <spacer name="verticalSpacer2">
      <property name="orientation">
@@ -27,6 +28,7 @@
      </property>
     </spacer>
    </item>
+
    <item row="0" column="0">
     <widget class="QGroupBox" name="groupBoxSkinOptions">
      <property name="title">
@@ -45,6 +47,7 @@
       <property name="bottomMargin">
        <number>0</number>
       </property>
+
       <item row="0" column="0">
        <widget class="QLabel" name="lableSkin_2">
         <property name="enabled">
@@ -77,6 +80,7 @@
         </property>
        </widget>
       </item>
+
       <item row="3" column="0" rowspan="2">
        <widget class="QLabel" name="labelColorScheme">
         <property name="enabled">
@@ -112,6 +116,7 @@
         </property>
        </widget>
       </item>
+
       <item row="5" column="1" colspan="2">
        <widget class="QLabel" name="skinDescriptionText">
         <property name="sizePolicy">
@@ -131,6 +136,7 @@
         </property>
        </widget>
       </item>
+
       <item row="6" column="1" colspan="2">
        <widget class="QLabel" name="warningLabel">
         <property name="text">
@@ -141,6 +147,7 @@
         </property>
        </widget>
       </item>
+
       <item row="7" column="1">
        <widget class="QLabel" name="skinPreviewLabel">
         <property name="text">
@@ -148,6 +155,7 @@
         </property>
        </widget>
       </item>
+
       <item row="8" column="0">
        <spacer name="verticalSpacer1">
         <property name="orientation">
@@ -161,6 +169,20 @@
         </property>
        </spacer>
       </item>
+      <item row="8" column="2">
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+
       <item row="9" column="0">
        <widget class="QLabel" name="textLabelLocale">
         <property name="text">
@@ -178,6 +200,7 @@
         </property>
        </widget>
       </item>
+
       <item row="10" column="0">
        <widget class="QLabel" name="labelScaleFactor">
         <property name="text">
@@ -202,6 +225,7 @@
         </property>
        </widget>
       </item>
+
       <item row="12" column="0">
        <widget class="QLabel" name="labelTooltips">
         <property name="enabled">
@@ -255,28 +279,31 @@
         </item>
        </layout>
       </item>
+
       <item row="13" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Clock</string>
+        </property>
+       </widget>
+      </item>
+      <item row="13" column="1" colspan="2">
+       <widget class="QCheckBox" name="checkBoxClockShowSeconds">
+        <property name="text">
+         <string>Show Seconds</string>
+        </property>
+       </widget>
+      </item>
+
+      <item row="14" column="0">
        <widget class="QLabel" name="label">
         <property name="text">
          <string>Screen saver</string>
         </property>
        </widget>
       </item>
-      <item row="13" column="1" colspan="2">
+      <item row="14" column="1" colspan="2">
        <widget class="QComboBox" name="comboBoxScreensaver"/>
-      </item>
-      <item row="8" column="2">
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
       </item>
       <item row="10" column="1">
        <layout class="QHBoxLayout" name="horizontalLayout_2">
